# livraria_Django

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_autores.py  0003_rename_tirulo_livro_titulo.py
livraria/models/: __init__.py  autor.py  livro.py
livraria/serializers/: livro.py
livraria/views/: autor.py  categoria.py  editora.py  livro.py
